k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bulletin
  labels:
    app: bulletin-app
    environment: local
  annotations:
    description: "Namespace for devsecops project"
