k8s/pod-out-of-limits.yaml
apiVersion: v1
kind: Pod

metadata:
  name: limitrange-test
  namespace: bulletin

spec:
  containers:
    - name: nginx
      image: nginx

      resources:
        requests:
          cpu: "200m"
          memory: "256Mi"

        limits:
          cpu: "1"
          memory: "1Gi"
