k8s/pod-within-limits.yaml
apiVersion: v1
kind: Pod

metadata:
  name: limitrange-test
  namespace: bulletin

spec:
  containers:
    - name: nginx
      image: nginx

      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"

        limits:
          cpu: "200m"
          memory: "256Mi"
