k8s/quota-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: quota-test
  namespace: bulletin

spec:
  containers:
    - name: nginx
      image: nginx:latest

      resources:
        requests:
          cpu: "2"
          memory: 2Gi

        limits:
          cpu: "4"
          memory: 4Gi
