k8s/minio-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: bulletin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: minio.local
      http:
        paths:
          - path: /minio(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
